--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">+6588338242</p>
+						<p class="text-detail">(+65) 8833 8242</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
