--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Crownfruit</p>
 				</div>
 				<div class="col">
-					<>
+					<img src=>
 				</div>
 			</div>
 		</div>
